# HyperGS-Visualizer

./: .dockerignore  .gitignore  README.md  pyproject.toml
ai_generated/: docker-compose.yml
ai_generated/backend/: Dockerfile  requirements.txt
ai_generated/frontend/: Dockerfile
backend/: data.py  main.py  training.py
backend/model/: __init__.py  autoencoder.py  training_utils.py  variational_autoencoder.py
data/complex_facility/Images/: MakoSpectrometer-t0000.img.hdr
external_code/: docker-compose.yml
external_code/backend/: Dockerfile
external_code/frontend/: Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Gaussian3D.ts
frontend/src/components/: BandSlice.tsx  DataCube.tsx  GaussianInstances.tsx  SpectralPlot.tsx
frontend/src/screens/: GaussianPruning.tsx  GaussianSplatting.tsx  HyperspectralCube.tsx  LatentSpace.tsx
models/: ae.pt  recon_ae_test.npy  recon_ae_train.npy  recon_vae_test.npy  recon_vae_train.npy  spectra_test.npy  spectra_train.npy  tsne_ae_test.npy  tsne_ae_train.npy  tsne_vae_test.npy  tsne_vae_train.npy  vae.pt
notebooks/: 01_explore_dataset.ipynb  02_autoencoder.ipynb
scripts/: download_data.py
