[tool.poetry]
name = "hypergs-viz"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
gradio = ">=4.44.0"
torch = ">=2.2.0"
numpy = ">=1.26.0"
plotly = ">=5.18.0"
scikit-learn = ">=1.4.0"
scipy = ">=1.12.0"
matplotlib = ">=3.8.0"
pillow = ">=10.0.0"
requests = ">=2.31.0"
tqdm = ">=4.66.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
