[tool.poetry]
name = "hypergs-viz"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = ">=2.2.0"
numpy = ">=1.26.0"
plotly = ">=5.18.0"
scikit-learn = ">=1.4.0"
scipy = ">=1.12.0"
matplotlib = ">=3.8.0"
pillow = ">=10.0.0"
requests = ">=2.31.0"
tqdm = ">=4.66.0"
spectral = "^0.24"
jupyter = "^1.1.1"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
python-multipart = "^0.0.32"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.3.0"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
